--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,26 +16,25 @@ jobs:
     services:
       docker:
         image: docker:19.03.12
-        options: --privileged
+        options: --privileged # This is where we keep only one 'options' key
         ports:
           - 2375:2375
         env:
           DOCKER_TLS_CERTDIR: ""
         volumes:
           - /var/run/docker.sock:/var/run/docker.sock
-        options: --privileged
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.6'
-        
-    - name: Install docker-compose
-      run: pip install docker-compose
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.6"
 
-    - name: Build and run tests
-      run: docker-compose run app sh -c "python manage.py test && flake8"
+      - name: Install docker-compose
+        run: pip install docker-compose
+
+      - name: Build and run tests
+        run: docker-compose run app sh -c "python manage.py test && flake8"
