--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
     services:
       docker:
         image: docker:19.03.12
-        options: --privileged # This is where we keep only one 'options' key
+        options: --privileged
         ports:
           - 2375:2375
         env:
@@ -26,12 +26,12 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3 # Updated to v3
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4 # Updated to v4
         with:
-          python-version: "3.6"
+          python-version: "3.8" # Updated to 3.8
 
       - name: Install docker-compose
         run: pip install docker-compose
