--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,5 @@
 name: CI/CD Pipeline
 
-# Trigger the workflow on push or pull request
 on:
   push:
     branches:
@@ -26,12 +25,12 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3 # Updated to v3
+        uses: actions/checkout@v3 # Updated to use Node.js 16+
 
       - name: Set up Python
-        uses: actions/setup-python@v4 # Updated to v4
+        uses: actions/setup-python@v3 # Updated to use Node.js 16+
         with:
-          python-version: "3.8" # Updated to 3.8
+          python-version: "3.9" # Updated Python version to 3.9
 
       - name: Install docker-compose
         run: pip install docker-compose
