--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-Django>=2.1.3,<2.2.0
-djangorestframework>=3.9.0,<3.10.0
-
-flake8>=3.6.0,<3.7.0
+Django>=3.2,<4.2  # Use the latest LTS version for better support
+djangorestframework>=3.12,<4.0  # Update to the latest version of DRF
+flake8>=4.0,<5.0  # Update to the latest version of Flake8
