--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,15 +25,18 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3 # Updated to use Node.js 16+
+        uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v3 # Updated to use Node.js 16+
+        uses: actions/setup-python@v3
         with:
-          python-version: "3.9" # Updated Python version to 3.9
+          python-version: "3.9"
 
       - name: Install docker-compose
         run: pip install docker-compose
+
+      - name: Print Environment Variables # Debugging step
+        run: env
 
       - name: Build and run tests
         run: docker-compose run app sh -c "python manage.py test && flake8"
